<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mpg_background"
    tools:context="com.katlic.mpgtracker.MpgTrackerSettingsActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/mpg_settings_vehicle_form_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="15dp"
        android:text="@string/mpg_settings_vehicle_form_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/mpg_settings_vehicle_make_input"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mpg_settings_vehicle_form_label"
        android:layout_below="@+id/mpg_settings_vehicle_form_label"
        android:ems="10"
        android:hint="@string/main_user_make_label" />

    <EditText
        android:id="@+id/mpg_settings_vehicle_model_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mpg_settings_vehicle_make_input"
        android:layout_alignRight="@id/mpg_settings_vehicle_make_input"
        android:layout_below="@+id/mpg_settings_vehicle_make_input"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/main_user_model_label" />

    <EditText
        android:id="@+id/mpg_settings_vehicle_year_input"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mpg_settings_vehicle_model_input"
        android:layout_below="@+id/mpg_settings_vehicle_model_input"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/main_user_year_label"
        android:inputType="number" />

    <Spinner
        android:id="@+id/mpg_settings_vehicle_tranny_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/mpg_settings_vehicle_year_input"
        android:layout_alignRight="@id/mpg_settings_vehicle_make_input"
        android:layout_alignTop="@+id/mpg_settings_vehicle_year_input"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/mpg_settings_vehicle_year_input"
        android:entries="@array/mpg_vehicle_gearing_select_items" />

    <Button
        android:id="@+id/mpg_vehicle_info_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mpg_settings_vehicle_year_input"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/mpg_settings_vehicle_tranny_select"
        android:layout_marginBottom="26dp"
        android:text="Save" />

</RelativeLayout>
